--- a/app/src/main/res/layout/activity_undo_redo.xml
+++ b/app/src/main/res/layout/activity_undo_redo.xml
@@ -21,7 +21,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/design_default_color_secondary"
                 android:minHeight="100dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -43,7 +44,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/design_default_color_primary"
                 android:minHeight="100dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -72,7 +74,7 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/undoBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,7 +83,7 @@
             android:onClick="onUndoClick"
             android:text="@string/undo" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/redoBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
